Assignemnt7/src/objects/API_Settings__mdt.object
<CustomObject>
    <fields>
        <fullName>API_Endpoint__c</fullName>
        <label>API_Endpoint</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>API_Key__c</fullName>
        <label>API_Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API_Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>API_Setting</label>
    <pluralLabel>API_Settings</pluralLabel>
</CustomObject>